--- a/apps/web/src/index.css
+++ b/apps/web/src/index.css
@@ -5,11 +5,183 @@
 @source "../../../packages/shared-types/src/**/*.ts";
 
 :root {
-  color-scheme: dark;
+    --background: oklch(0.9794 0.0046 78.2981);
+    --foreground: oklch(0.2079 0.0399 265.7275);
+    --card: oklch(1 0 0);
+    --card-foreground: oklch(0.2079 0.0399 265.7275);
+    --popover: oklch(1 0 0);
+    --popover-foreground: oklch(0.2079 0.0399 265.7275);
+    --primary: oklch(0.4923 0.1538 257.1967);
+    --primary-foreground: oklch(0.9843 0.0017 247.8393);
+    --secondary: oklch(0.9684 0.0068 247.8951);
+    --secondary-foreground: oklch(0.2079 0.0399 265.7275);
+    --muted: oklch(0.9684 0.0068 247.8951);
+    --muted-foreground: oklch(0.5547 0.0407 257.4404);
+    --accent: oklch(0.9684 0.0068 247.8951);
+    --accent-foreground: oklch(0.2079 0.0399 265.7275);
+    --destructive: oklch(0.6368 0.2078 25.3259);
+    --destructive-foreground: oklch(0.9843 0.0017 247.8393);
+    --border: oklch(0.929 0.0126 255.5317);
+    --input: oklch(0.929 0.0126 255.5317);
+    --ring: oklch(0.4923 0.1538 257.1967);
+    --chart-1: oklch(0.6273 0.17 149.2005);
+    --chart-2: oklch(0.4945 0.1326 247.8457);
+    --chart-3: oklch(0.561 0.2138 20.7845);
+    --chart-4: oklch(0.7319 0.1226 215.5502);
+    --chart-5: oklch(0.5382 0.1413 262.6152);
+    --sidebar: oklch(0.3906 0.0737 250.2425);
+    --sidebar-foreground: oklch(0.9843 0.0017 247.8393);
+    --sidebar-primary: oklch(0.4923 0.1538 257.1967);
+    --sidebar-primary-foreground: oklch(0.9843 0.0017 247.8393);
+    --sidebar-accent: oklch(0.9684 0.0068 247.8951);
+    --sidebar-accent-foreground: oklch(0.2079 0.0399 265.7275);
+    --sidebar-border: oklch(0.929 0.0126 255.5317);
+    --sidebar-ring: oklch(0.4923 0.1538 257.1967);
+    --font-sans: Inter;
+    --font-serif: serif;
+    --font-mono: Fira Code;
+    --radius: 0.5rem;
+    --shadow-x: 0px;
+    --shadow-y: 2px;
+    --shadow-blur: 6px;
+    --shadow-spread: 0px;
+    --shadow-opacity: 0.05;
+    --shadow-color: hsl(0 0% 0%);
+    --shadow-2xs: 0px 2px 6px 0px hsl(0 0% 0% / 0.03);
+    --shadow-xs: 0px 2px 6px 0px hsl(0 0% 0% / 0.03);
+    --shadow-sm: 0px 2px 6px 0px hsl(0 0% 0% / 0.05),
+        0px 1px 2px -1px hsl(0 0% 0% / 0.05);
+    --shadow: 0px 2px 6px 0px hsl(0 0% 0% / 0.05),
+        0px 1px 2px -1px hsl(0 0% 0% / 0.05);
+    --shadow-md: 0px 2px 6px 0px hsl(0 0% 0% / 0.05),
+        0px 2px 4px -1px hsl(0 0% 0% / 0.05);
+    --shadow-lg: 0px 2px 6px 0px hsl(0 0% 0% / 0.05),
+        0px 4px 6px -1px hsl(0 0% 0% / 0.05);
+    --shadow-xl: 0px 2px 6px 0px hsl(0 0% 0% / 0.05),
+        0px 8px 10px -1px hsl(0 0% 0% / 0.05);
+    --shadow-2xl: 0px 2px 6px 0px hsl(0 0% 0% / 0.13);
+    --tracking-normal: 0rem;
+    --spacing: 0.25rem;
+}
+
+.dark {
+    --background: oklch(0.3906 0.0737 250.2425);
+    --foreground: oklch(0.9843 0.0017 247.8393);
+    --card: oklch(0.28 0.0369 259.974);
+    --card-foreground: oklch(0.9843 0.0017 247.8393);
+    --popover: oklch(0.28 0.0369 259.974);
+    --popover-foreground: oklch(0.9843 0.0017 247.8393);
+    --primary: oklch(0.4923 0.1538 257.1967);
+    --primary-foreground: oklch(0.9843 0.0017 247.8393);
+    --secondary: oklch(0.28 0.0369 259.974);
+    --secondary-foreground: oklch(0.9843 0.0017 247.8393);
+    --muted: oklch(0.28 0.0369 259.974);
+    --muted-foreground: oklch(0.7107 0.0351 256.7877);
+    --accent: oklch(0.28 0.0369 259.974);
+    --accent-foreground: oklch(0.9843 0.0017 247.8393);
+    --destructive: oklch(0.3959 0.1331 25.7205);
+    --destructive-foreground: oklch(0.9843 0.0017 247.8393);
+    --border: oklch(0.28 0.0369 259.974);
+    --input: oklch(0.28 0.0369 259.974);
+    --ring: oklch(0.4923 0.1538 257.1967);
+    --chart-1: oklch(0.6273 0.17 149.2005);
+    --chart-2: oklch(0.4945 0.1326 247.8457);
+    --chart-3: oklch(0.561 0.2138 20.7845);
+    --chart-4: oklch(0.7319 0.1226 215.5502);
+    --chart-5: oklch(0.5382 0.1413 262.6152);
+    --sidebar: oklch(0.2079 0.0399 265.7275);
+    --sidebar-foreground: oklch(0.9843 0.0017 247.8393);
+    --sidebar-primary: oklch(0.4923 0.1538 257.1967);
+    --sidebar-primary-foreground: oklch(0.9843 0.0017 247.8393);
+    --sidebar-accent: oklch(0.28 0.0369 259.974);
+    --sidebar-accent-foreground: oklch(0.9843 0.0017 247.8393);
+    --sidebar-border: oklch(0.28 0.0369 259.974);
+    --sidebar-ring: oklch(0.4923 0.1538 257.1967);
+    --font-sans: Inter;
+    --font-serif: serif;
+    --font-mono: Fira Code;
+    --radius: 0.5rem;
+    --shadow-x: 0px;
+    --shadow-y: 2px;
+    --shadow-blur: 6px;
+    --shadow-spread: 0px;
+    --shadow-opacity: 0.5;
+    --shadow-color: hsl(0 0% 0%);
+    --shadow-2xs: 0px 2px 6px 0px hsl(0 0% 0% / 0.25);
+    --shadow-xs: 0px 2px 6px 0px hsl(0 0% 0% / 0.25);
+    --shadow-sm: 0px 2px 6px 0px hsl(0 0% 0% / 0.5),
+        0px 1px 2px -1px hsl(0 0% 0% / 0.5);
+    --shadow: 0px 2px 6px 0px hsl(0 0% 0% / 0.5),
+        0px 1px 2px -1px hsl(0 0% 0% / 0.5);
+    --shadow-md: 0px 2px 6px 0px hsl(0 0% 0% / 0.5),
+        0px 2px 4px -1px hsl(0 0% 0% / 0.5);
+    --shadow-lg: 0px 2px 6px 0px hsl(0 0% 0% / 0.5),
+        0px 4px 6px -1px hsl(0 0% 0% / 0.5);
+    --shadow-xl: 0px 2px 6px 0px hsl(0 0% 0% / 0.5),
+        0px 8px 10px -1px hsl(0 0% 0% / 0.5);
+    --shadow-2xl: 0px 2px 6px 0px hsl(0 0% 0% / 1.25);
+}
+
+@theme inline {
+    --color-background: var(--background);
+    --color-foreground: var(--foreground);
+    --color-card: var(--card);
+    --color-card-foreground: var(--card-foreground);
+    --color-popover: var(--popover);
+    --color-popover-foreground: var(--popover-foreground);
+    --color-primary: var(--primary);
+    --color-primary-foreground: var(--primary-foreground);
+    --color-secondary: var(--secondary);
+    --color-secondary-foreground: var(--secondary-foreground);
+    --color-muted: var(--muted);
+    --color-muted-foreground: var(--muted-foreground);
+    --color-accent: var(--accent);
+    --color-accent-foreground: var(--accent-foreground);
+    --color-destructive: var(--destructive);
+    --color-destructive-foreground: var(--destructive-foreground);
+    --color-border: var(--border);
+    --color-input: var(--input);
+    --color-ring: var(--ring);
+    --color-chart-1: var(--chart-1);
+    --color-chart-2: var(--chart-2);
+    --color-chart-3: var(--chart-3);
+    --color-chart-4: var(--chart-4);
+    --color-chart-5: var(--chart-5);
+    --color-sidebar: var(--sidebar);
+    --color-sidebar-foreground: var(--sidebar-foreground);
+    --color-sidebar-primary: var(--sidebar-primary);
+    --color-sidebar-primary-foreground: var(--sidebar-primary-foreground);
+    --color-sidebar-accent: var(--sidebar-accent);
+    --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
+    --color-sidebar-border: var(--sidebar-border);
+    --color-sidebar-ring: var(--sidebar-ring);
+
+    --font-sans: var(--font-sans);
+    --font-mono: var(--font-mono);
+    --font-serif: var(--font-serif);
+
+    --radius-sm: calc(var(--radius) - 4px);
+    --radius-md: calc(var(--radius) - 2px);
+    --radius-lg: var(--radius);
+    --radius-xl: calc(var(--radius) + 4px);
+
+    --shadow-2xs: var(--shadow-2xs);
+    --shadow-xs: var(--shadow-xs);
+    --shadow-sm: var(--shadow-sm);
+    --shadow: var(--shadow);
+    --shadow-md: var(--shadow-md);
+    --shadow-lg: var(--shadow-lg);
+    --shadow-xl: var(--shadow-xl);
+    --shadow-2xl: var(--shadow-2xl);
+
+    --tracking-tighter: calc(var(--tracking-normal) - 0.05em);
+    --tracking-tight: calc(var(--tracking-normal) - 0.025em);
+    --tracking-normal: var(--tracking-normal);
+    --tracking-wide: calc(var(--tracking-normal) + 0.025em);
+    --tracking-wider: calc(var(--tracking-normal) + 0.05em);
+    --tracking-widest: calc(var(--tracking-normal) + 0.1em);
 }
 
 body {
-  margin: 0;
-  font-family: "Inter", system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
-    sans-serif;
+    letter-spacing: var(--tracking-normal);
 }
